<?xml version="1.0"?>
<package format="2">
  <name>pycram_pr2_bullet_world_demo</name>
  <version>0.0.0</version>
  <description>A demonstration package for the bullet world capacities of PyCRAM.</description>

  <maintainer email="jdech@uni-bremen.de">Jonas Dech</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>pycram</depend>
</package>
