<?xml version="1.0"?>
<package format="2">
  <name>pycram_tasktree_demo</name>
  <version>0.0.0</version>
  <description>Just a simple test package for now.</description>

  <maintainer email="cpollok@uni-bremen.de">Christopher Pollok</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>pycram</depend>
</package>
